--- a/pom.xml
+++ b/pom.xml
@@ -17,15 +17,32 @@
   	<!-- SpringBoot dependency: web-related .jars -->
   	<dependency>
   		<groupId>org.springframework.boot</groupId>
-  		<artifactId>spring-boot-starter-web</artifactId>
+  		<artifactId>spring-boot-starter-jersey</artifactId>
   	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-crypto</artifactId>
+	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
+	<dependency>
+		<groupId>commons-validator</groupId>
+		<artifactId>commons-validator</artifactId>
+		<version>1.6</version>
+	</dependency>
+
   	
-  	<!-- Spring security -->
-  	<dependency>
-  		<groupId>org.springframework.boot</groupId>
-  		<artifactId>spring-boot-starter-security</artifactId>
-  	</dependency>
+  	<!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
+	<dependency>
+		<groupId>javax.ws.rs</groupId>
+		<artifactId>javax.ws.rs-api</artifactId>
+		<version>2.1</version>
+	</dependency>
+  	
   </dependencies>
+  
   
   <!-- property declaration -->
   <properties>
