Adds url registration no crypt

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,15 @@
   		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-starter-security</artifactId>
   	</dependency>
+  	
+  	<!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
+	<dependency>
+		<groupId>commons-validator</groupId>
+		<artifactId>commons-validator</artifactId>
+		<version>1.6</version>
+	</dependency>
   </dependencies>
+ 
   
   <!-- property declaration -->
   <properties>
