--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 		<artifactId>commons-validator</artifactId>
 		<version>1.6</version>
 	</dependency>
+
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-thymeleaf</artifactId>
+	</dependency>
   </dependencies>
  
   
